比較を少しゆるく修正

--- a/work-detail.html
+++ b/work-detail.html
@@ -562,7 +562,8 @@ try {
 
   const data = await response.json();
 
-const work = data.find(item => item.ID === workId);
+  const work = data.find(item => String(item.ID).trim() === String(workId).trim());
+
 
 if (!work) {
   displayNotFound();
