--- a/work-detail.html
+++ b/work-detail.html
@@ -562,7 +562,7 @@ try {
 
   const data = await response.json();
 
-  const work = data.find(item => String(item.ID).trim() === String(workId).trim());
+  const work = data;
 
 
 if (!work) {
